--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,9 @@
     "php": ">=5.4.0",
     "yiisoft/yii2": ">=2.0.4"
   },
+  "require-dev": {
+    "phpunit/phpunit": "4.8.*"
+  },
   "autoload": {
     "psr-4": {
       "salatnik\\backop\\": "src"
